[gd_scene load_steps=2 format=3 uid="uid://byjxsli8y0ck4"]

[ext_resource type="Script" uid="uid://tekr3skhcmmm" path="res://Scripts/File/video_window.gd" id="1_eb12i"]

[node name="video_window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1600.0
offset_bottom = -900.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eb12i")

[node name="Window" type="Window" parent="."]
position = Vector2i(0, 36)
size = Vector2i(800, 450)

[node name="con" type="AspectRatioContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Window/con"]
layout_mode = 2
expand = true

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="finished" from="Window/con/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
